finalPractice/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
      tier: backend-server
  template:
    metadata:
      labels:
        app: backend
        tier: backend-server    
    spec:    
      containers:
      - name: backend
        image: juancrespo/practice:2.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8087
