finalPractice/backend/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: mysql  
spec:
  selector:
    matchLabels:
      app: mysql
      tier: mysql-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql-server
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql2
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
