finalPractice/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: backend-svc
  labels: 
    tier: backend-server
spec:
  selector:
    tier: backend-server
  ports:
    - targetPort: 8080
      port: 8080
