finalPractice/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: h-ingress
  annotations:   
spec:
  rules:
  - host: "backend.k8s.cselecourse"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
